2004-08-03  Steve Lhomme  <steve.lhomme@free.fr>

	* docs/manual/win32.xml:
	* win32/README.txt:
	  update documentation with the clean version of dependencies

2004-08-03  Benjamin Otte  <otte@gnome.org>

	* gst/schedulers/entryscheduler.c:
	(gst_entry_scheduler_remove_element):
	  fix for GST_DISABLE_DEBUG
	* tools/gst-launch.c: (print_tag):
	  fixes for G_DISABLE_ASSERT

2004-08-03  Benjamin Otte  <otte@gnome.org>

	* gst/gst.c: (gst_register_core_elements):
	  fix for G_DISABLE_ASSERT
	* gst/gstinfo.c: (__gst_in_valgrind):
	  add for GST_DISABLE_DEBUG

2004-08-03  Benjamin Otte  <otte@gnome.org>

	* gst/parse/parse.l:
	  fix for G_DISABLE_ASSERT

2004-08-03  Wim Taymans  <wim@fluendo.com>

	* gst/gstbin.c: (gst_bin_get_type),
	(gst_bin_child_state_change_func):
	* gst/gstthread.c: (gst_thread_change_state):
	Backported some debug logging from a reverted patch
	Don't try to destroy the thread twice. Added some more
	debugging in GstThread. Unlock and signal even if we
	are in the thread context.

2004-08-03  Thomas Vander Stichele  <thomas at apestaart dot org>

	* po/uk.po:
	  updated translation

2004-07-30  David Schleef  <ds@schleef.org>

	* gst/gstatomic_impl.h: Enable atomic code for x86_64

2004-07-29  David Schleef  <ds@schleef.org>

	* libs/gst/dataprotocol/dataprotocol-test.c: (conversion_test):
	Use GST_READ_GUINTxx_BE(), since it accesses unaligned memory.

2004-07-29  Thomas Vander Stichele  <thomas at apestaart dot org>

	* gst/gstbin.c: (gst_bin_get_type), (gst_bin_class_init),
	(gst_bin_add_func), (gst_bin_remove_func),
	(gst_bin_child_state_change), (gst_bin_child_state_change_func),
	(set_kid_state_func), (gst_bin_change_state), (gst_bin_set_state),
	(gst_bin_change_state_norecurse), (gst_bin_dispose),
	(gst_bin_sync_children_state):
	* gst/gstbin.h:
	* gst/gstthread.c: (gst_thread_class_init), (gst_thread_release),
	(gst_thread_change_state):
	* testsuite/states/Makefile.am:
	  revert state change patches as agreed so we can rework them